[package]
name = "vbus2influx"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.2"
figment = { version = "0.10.6", features = ["toml"] }
resol-vbus = "0.2.1"
rppal = "0.13.1"
serde = { version = "1.0.140", features = ["derive"] }
tokio = { version = "1.38.2", features = ["full"] }
axum = "0.5.14"

[dependencies.influxdb]
features = ["derive"]
git = "https://github.com/marcelbuesing/influxdb-rust.git"
branch = "reqwest-client-influx20"

[profile.release]
strip = true
